# hw3-clustering

./: HW3_Testing.ipynb  README.md  pyproject.toml
.github/workflows/: test.yml
cluster/: __init__.py  kmeans.py  silhouette.py
test/: test_kmeans.py  test_silhouette.py
